refactor(s3ImageService) : 허용 확장자 리스트를 불변객체로 변경